# segzi-tools

./: .gitignore  Gemfile  README.md  Rakefile  seiji-tools.cabal
.github/: CONTRIBUTING.md
.stack-work/install/x86_64-linux/lts-6.10/7.10.3/lib/x86_64-linux-ghc-7.10.3/seiji-tools-0.1.0.0-JqMLd3RoigsJ1A7CPurlWI/: Lib.hi
.stack-work/install/x86_64-linux/lts-6.10/7.10.3/pkgdb/: package.cache  seiji-tools-0.1.0.0-4448082a876244630a50c261a6c4d344.conf
autoload/: seiji.vim
cli/: Rakefile
dic/: Unicode舊字JIS舊字對照表.txt  字正表(JIS第一 > IVS).txt  字正表(JIS第一->IVS).txt  字正表の爲の覺書.txt  新字舊字對照表.txt
dictionary/: proposition.dic  translation.dic
doc/: seiji.jax
font/: uniseiji.pe  uniseiji.pe.php  uniseiji.sh
memo/: 字正表の爲の覺書.txt
plugin/: seiji.vim
segzify/: .gitignore  Example.jsx  InDesign.jsx  InDesign.py  Makefile  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  tasks.py  webpack.js
segzify/segzify/: Segzify.py  __init__.py
segzify/tests/: __init__.py  test_segzify.py
test/: .vimrc  Seiji.vim  conv_to_seiji.vim  test.sh
test/lib/: test.vim
textlint/: .gitignore  .textlintrc  Makefile  README.md  index.js  package.json
textlint/lib/: build.js  dic.js  promisify.js
textlint/lib/rules/: no-kyuji.js  no-zokuji.js
textlint/src/: dic.js.ejs
textlint/tests/: index_test.js
textlint/tests/rules/: no-kyuji_test.js  no-zokuji_test.js
