[tool.poetry]
name = "segzify"
version = "0.1.0"
description = ""
authors = ["ne-sachirou <utakata.c4se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
Transcrypt = "^3.7.16"
coverage = "^5.3"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
